// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginFailureMessage should match direct render of error message snapshot 1`] = `
<div
  className="fade alert alert-danger show"
  role="alert"
>
  <div
    className="alert-heading h4"
  >
    <span>
      We couldn't sign you in.
    </span>
  </div>
  <ul>
    <li>
      Email or password is incorrect.
    </li>
  </ul>
</div>
`;

exports[`LoginFailureMessage should match error message containing link snapshot 1`] = `
<div
  className="fade alert alert-danger show"
  role="alert"
>
  <div
    className="alert-heading h4"
  >
    <span>
      We couldn't sign you in.
    </span>
  </div>
  <ul>
    <li>
      To be on the safe side, you can reset your password 
      <a
        href="/reset"
        onClick={[Function]}
        target="_self"
      >
        here
      </a>
       before you try again.
    </li>
  </ul>
</div>
`;

exports[`LoginFailureMessage should match inactive user error message snapshot 1`] = `
<div
  className="fade alert alert-danger show"
  role="alert"
>
  <div
    className="alert-heading h4"
  >
    <span>
      We couldn't sign you in.
    </span>
  </div>
  <ul>
    <li>
      <span>
        In order to sign in, you need to activate your account.
        <br />
         
        <br />
        We just sent an activation link to 
        <strong>
          text@example.com
        </strong>
        . If you do not receive an email, check your spam folders or 
        <a
          className="alert-link"
          href="https://support.edx.org/"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <span>
            contact openedX Support
          </span>
        </a>
        .
      </span>
    </li>
  </ul>
</div>
`;

exports[`LoginFailureMessage should match internal server error message snapshot 1`] = `
<div
  className="fade alert alert-danger show"
  role="alert"
>
  <div
    className="alert-heading h4"
  >
    <span>
      We couldn't sign you in.
    </span>
  </div>
  <ul>
    <li>
      <span>
        An error has occurred. Try refreshing the page, or check your Internet connection.
      </span>
    </li>
  </ul>
</div>
`;

exports[`LoginFailureMessage should match non compliant password error message snapshot 1`] = `
<div
  className="fade alert alert-danger show"
  role="alert"
>
  <div
    className="alert-heading h4"
  >
    <span>
      We couldn't sign you in.
    </span>
  </div>
  <ul>
    <li>
      <span>
        <strong>
          We recently changed our password requirements
        </strong>
         
        <br />
        Your current password does not meet the new security requirements. We just sent a password-reset message to the email address associated with this account. Thank you for helping us keep your data safe.
      </span>
    </li>
  </ul>
</div>
`;
